--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
 </head>
 <body>
+    
     <h1>Khushpreet Kaur</h1>
     A proven track record at Olymel, adept in critical thinking and material handling. Excelled in optimizing resource allocation and waste reduction. enhancing product quality and efficiency. Skilled in computer applications, including MS Office, and renowned for exceptional attention to detail and organizational skills.
 EXPERIENCE</br></br>
 
 <h2>Work Experience</h2>
 
-May 2023 - May 2024
+<b>May 2023 - May 2024</b></br>
 Production Worker Olymel, Brampton, ON</br>
 * Followed detailed instructions from supervisors for daily tasks.</br>
 * Performed quality checks on products to ensure adherence to standards.</br>
@@ -22,7 +22,7 @@ Production Worker Olymel, Brampton, ON</br>
 
 
 
-January 2023 - April 2023</br>
+<b>January 2023 - April 2023</b></br>
 Warehouse Worker</br>
 Go Direct, Mississauga, ON</br>
 * Operated manual pallet jack to move products throughout warehouse.</br>
